[project]
name = "fastapi-sse"
version = "1.1.0"
description = "A tiny library for sending Server-Sent Events (SSE) in FastAPI"
authors = [
    { name = "Matthew D. Scholefield", email = "matthew331199@gmail.com" },
]
dependencies = ["fastapi>=0.51.0"]
readme = "README.md"
requires-python = ">= 3.10"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/MatthewScholefield/fastapi-sse"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.7.1",
    "pytest>=8.3.3",
    "httpx>=0.27.2",
    "async-asgi-testclient>=1.4.11",
    "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
include = ["fastapi_sse.py"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["PLR2004", "S101", "S106"]

[tool.ruff.format]
quote-style = "single"
